2014-01-21  Sergio Martin <sergio.martin@artica.es>

	* images/long_arrow.png
	godmode/alerts/alert_view.php
	godmode/alerts/alert_list.list.php
	include/styles/pandora.css: Added an advanced alert view
	with details, triggering conditions, actions escalation and
	actions fields including triggering, recovering and command preview

2014-01-20  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql: Changed the type of tnetwork_component.description to
	  TEXT. Fixes ticket #487.

2014-01-20  Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/user.class.php,
	mobile/include/system.class.php: fixed SQL injection.
	
	Issue found by Lincoln, a member of Corelan Team

2014-01-17 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed group filter in report
	list view.

2014-01-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed the PHP warnings and
	notices.
	
	Fixes: #2414

2014-01-17 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* godmode/events/event_edit_filter.php
	include/functions_events.php
	operation/events/events_list.php:Fixed an ACL issue with event filters.

2014-01-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Added ack_utimestamp and id_agent
	to the grouped events query to fix bad results

2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php,
	include/functions_agents.php: fixed the PHP warnings and notices.
	
	Fixes: #2412

2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php: fixed the PHP notices about the var
	$search_keywords.

2014-01-16  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/alert_list.list.php,
	  include/functions.php,
	  include/functions_alerts.php: Changes to the alert view to make it more
	  compact.

2014-01-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Fixed a warning message on