@@ -317,6 +317,10 @@ define ('REPORT_EXCEPTION_CONDITION_NE', 8);
 define ('REPORT_EXCEPTION_CONDITION_OK', 3);
 define ('REPORT_EXCEPTION_CONDITION_NOT_OK', 4);
 
+define ('REPORT_ITEM_ORDER_BY_AGENT_NAME', 3);
+define ('REPORT_ITEM_ORDER_BY_ASCENDING', 2);
+define ('REPORT_ITEM_ORDER_BY_DESCENDING', 1);
+
 /* POLICIES */
 
 define("POLICY_UPDATED", 0);
