@@ -1,3 +1,12 @@
+2014-01-22  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/reporting/reporting_builder.item_editor.php,
+	include/constants.php, include/functions_reporting.php: added
+	constants and killed magic numbers and unicorns.
+	
+	* include/functions_modules.php: added function
+	"modules_get_modules_in_group".
+
 2014-01-21  Sergio Martin <sergio.martin@artica.es>
 
 	* images/long_arrow.png
